RoboticsManual: add simple description of work with Github

--- a/RoboticsManual/_dokumentace.tex
+++ b/RoboticsManual/_dokumentace.tex
@@ -46,7 +46,10 @@
 % \hypertarget{label}{cíl_odkazu} - cíl odkazu  
 
 
-\hypersetup{colorlinks=true, linkcolor=myblue, urlcolor=mygreen, citecolor=blue, anchorcolor = magenta, linktocpage = true, frenchlinks } % nastavení barvy odkazů
+\hypersetup{colorlinks=true, linkcolor=myblue, urlcolor=mygreen, citecolor=blue, anchorcolor = magenta,
+	 linktocpage = true, frenchlinks } % nastavení barvy odkazů 
+	% bookmarksopen=true, bookmarksnumbered=true, bookmarksopenlevel=1 - nastavuje rozbalování levého menu       
+	
 
 
 \usepackage{makeidx} % slouží pro vytváření indexů/rejstříků
@@ -75,7 +78,7 @@
 %\fxnote{Poznámka} 		% zelená
 %\fxwarning{Poznámka}	% oranžová	
 %\fxerror{Poznámka}		% červená
-%\fxfatal{Poznámka}		% sitě červená
+%\fxfatal{Poznámka}		% sytě červená
 %\fxnote*{Text poznámky}{text v textu, který se má zvýraznit} % potřeba mít * za fxnote
 %\listoffixmes			% zobrazí seznam poznámek 
 %%
