--- a/RoboticsManual/software.tex
+++ b/RoboticsManual/software.tex
@@ -25,8 +25,36 @@ Ve WinXP používám PSpad, v~linuxu TeXstudio.
 Oba editory umí zavolat překlad do pdf pomocí klávesové zkratky, zobrazit výsledný pdf a~barevné zvýraznění syntaxe. 
 PSpad se dá rozjet i~pod linuxem pomocí prostředí Wine, ale nepodařilo se mi rozchodit volání překladu. 
 
+
+\section{Github}
+
+\subsection{Proč a jak se používá}
+
+Pokud více lidí pracuje průběžně na stejném projektu, musejí nějak sdílet výsledky svojí práce. K tomu se používají 
+tzv. repozitáře a Github\footnote{\url{www.github.com}} je v současnoti jeden z nejpoužívanějších webů pro tvorbu a správu repozitářů. 
+%todo doplnit vysvětlení, co všechno github umí 
+
+
+Postup práce je následující: na webu github.com si vytvořím repozitář (viz \ref{instal_github}) . Stáhnu k sobě na počítač aktuální verzi repozitáře, upravím, co potřebuji a upravené soubory nahraju zpět na server. 
+
+Repozitář, ve kterém je i tato dokumentace, je na adrese 
+\url{https://github.com/RoboticsBrno/RobotikaBrno-guides/tree/RoboticsManual}.  
+
+
+\subsection{Instalace githubu a stažení repozitáře} \label{instal_github}
+
+\begin{enumerate}
+	\item Na github.com vytvořím účet a přihlásím se. Vpravo můžu založit nový repozitář (new repository) nebo se můžu přepnout do už existujících repozitářů. 
+	
+	\item Na svém počítači si naunstaluji github. V linuxu napíšu do terminálu: {\tt sudo apt-get install git}.  
+	
+	\item Vytvořím si lokální adresář a stáhnu do něj repozitář. V linuxu napíšu do terminálu: {\tt git clone <cestu k repozitáři> }. 
+	Cestu zjistím tak, že se na webu přepnu do repozitáře a kliknu na tlačítko \uv{Clone or download}. Ose bjeví 
+\end{enumerate}
+
+
  
-\subsection{Další software}
+\section{Další software}
 
 \subsection{Proficad}
 
