RoboticsManual: add notes about Linux

--- a/RoboticsManual/software.tex
+++ b/RoboticsManual/software.tex
@@ -56,6 +56,8 @@ Repozitář, ve kterém je i tato dokumentace, je na adrese
  
 \section{Další software}
 
+
+
 \subsection{Proficad}
 
 Proficad\footnote{Instalační soubor seženete v~kroužku nebo na webu.} 
@@ -71,7 +73,56 @@ Většinou se to hodí -- součástky máte na schématu pěkně zarovnané -- a
 někdy je prostě potřeba rastr například vypnout neboli nastavit na nulu. 
 Nastavení rastru je schované zde:  {\it soubor/nastavení/dokument/obsah/rastr}.
 
-\subsection{Prohlížení Pdf}
+\subsection{Linux} 
 
-Ve WinXP se osvědčil Foxit Reader verze 2.3, v~linuxu Evince.  
-%todo doplnit odkazy a další software
+Tato kapitolka není úvodem do Linuxu (materiálů na toto téma je na webu spousta).  Jsou zde poznámky, které hodí, když uživatel přechází z Windows na Linux. \index{Linux}
+
+\paragraph{Některé rozdíly Linux -- Windows}
+
+\begin{itemize}
+
+\item Linux {\bf rozlišuje velká a~malá písmena}. V terminálu, v názvech souborů, všude. 
+
+\item Když si chce uživatel nainstalovat Linux, vybírá ne operační systém, ale tzv. distribuci = operační systém + spousta předinstalovaných programů. Kritérií pro výběr je spousta, pár tipů: 
+
+	\begin{itemize}
+		\item distribuce {\it Mint} má podobné rozložení grafických ovládacích prvků jak windows a je nenáročná na hardware 
+	
+		\item distribuce {\it Ubuntu} je standardní volba s velkou výbavou programů. Její odlehčená verze pro starší počítače je {\it Lubuntu}. 
+	
+	\end{itemize}  
+
+\item V Linuxu se celkově mnohem víc (a účiněji) používá příkazová řádka neboli program  {\tt terminál}. \index{termiál} Spouští se klávesou {\tt F4}. 
+
+\item Adresářová struktura Linuxu je jednotná pro všechny disky v počítači. Akce typu: {\it \uv{přepni se na disk e:} } se v terminálu provede jako {\it \uv{přepni se do adresáře /media/<uzivatel>/ ...  } }. Nebo se přepnete pomocí jiného programu, např. Správce souborů. 	
+	
+\item Některé programy fungují pod Linux i Windows, u jiných se při přechodu z Windows na linux musí na webu najít odpovídající náhrada, opět pár tipů: 
+
+	\begin{itemize}
+		\item Ve WinXP se pro prohlížení pdf souborů osvědčil Foxit Reader verze 2.3, v~linuxu Evince.  
+			
+		\item Irfan view jede i~v~Linuxu\footnote{\url{http://www.boekhoff.info/install-irfan-view-on-linux/}}.
+	
+	\end{itemize}
+
+	
+\end{itemize}
+
+
+\paragraph{Co se hodí vědět }
+
+\begin{itemize}
+	
+	
+\item Heslo v Linuxu se při zadávání v terminálu nevypisuje ani tečkami (ale počítač o něm ví!). 
+
+\item Znak zavináč se napíše {\tt AltGr+v}.
+
+\item Drivery do tiskáren mají příponu ppd. Před jejich použitím se musí nainstalovat program cups. 
+
+\item Snímek obrazovky uložíte stiskem klávesy {\tt PrintScreen} do adresáře 
+{\tt /home/<prihlaseny uzivatel>}. 
+
+\item Znak {\tt \#} znamená řádek na terminálu (zastupuje vypsání aktuálního adresáře). 	
+	
+\end{itemize}
