--- a/RoboticsManual/zacatek.tex
+++ b/RoboticsManual/zacatek.tex
@@ -118,7 +118,7 @@ Pokud s~programováním čipů začínáme, čekají nás tyto úkoly:
 \end{enumerate}
 Toto vše podrobněji probereme na dalších řádcích. 
 
-\label{vsc} \subsubsection{Nainstalovat  Visual Studio Code}
+\label{vsc} \subsubsection{Nainstalovat  Visual Studio Code} \label{vscode}
 
 %% \index{neco} % pokud chci mít slovo v indexu a v textu, musím jej zopakovat - nenašel jsem v LaTeXu jinou možnost
 {\it Visual Studio Code} \index{Visual~Studio~Code} (zkráceně VS Code) 
