RoboticsManual: add few notes about Linux

--- a/RoboticsManual/software.tex
+++ b/RoboticsManual/software.tex
@@ -129,14 +129,17 @@ Tato kapitolka není úvodem do Linuxu (materiálů na toto téma je na webu spo
 	
 \item Heslo v Linuxu se při zadávání v terminálu nevypisuje ani tečkami (ale počítač o něm ví!). 
 
-\item Znak zavináč se napíše {\tt AltGr+v}.
+\item Znak zavináč se napíše {\tt AltGr+v}, znak vlna se napíše {\tt AltGr+a}.
 
 \item Drivery do tiskáren mají příponu ppd. Před jejich použitím se musí nainstalovat program cups. 
 
 \item Snímek obrazovky uložíte stiskem klávesy {\tt PrintScreen} do adresáře 
 {\tt /home/<prihlaseny uzivatel>}. 
 
-\item Znak {\tt \#} znamená řádek na terminálu (zastupuje vypsání aktuálního adresáře). 	
+\item Znak {\tt \#} znamená řádek na terminálu (zastupuje vypsání aktuálního adresáře). 
+
+\item Zkratka {\tt Ctrl+C} v terminálu není pro kopírování, ale ukončení běžícího programu. (Mimo terminál kopírování funguje jako ve windows). Pokud chceme v terminálu kopírovat a vkládat, použijeme {\tt Ctrl+Shift+c}  {\tt Ctrl+Shift+v}.
+
 	
 \end{itemize}
 
