RoboticsManual: add breif text about Lorris

--- a/RoboticsManual/software.tex
+++ b/RoboticsManual/software.tex
@@ -1,4 +1,25 @@
  
+ \section{Lorris}
+ 
+ {\bf Lorris}\footnote{\url{http://tasssadar.github.io/Lorris/cz/index.html}} \index{Lorris} je rozsáhlá sada nástrojů, které mají společný cíl -- pomáhat při vývoji, ladění a řízení zejména robotů, ale i jiných elektronických zařízení. V současnosti neexistuje jiná volně dostupná aplikace, která by umožňovala dostatečně jednoduše v téměř libovolném formátu zobrazit data přicházející z čipů nebo i data ze souborů. 
+ 
+\paragraph{ Hlavní možnosti použití: }
+
+\begin{itemize}
+	\item grafické zobrazování, přiřazování a analýza (binárních) dat z čipů
+	\item vykreslování příchozích dat v grafu 
+	\item zpracování dat z jednoho zdroje ve více modulech současně
+	\item zobrazení dat z více zdrojů na jednom místě -- ideální pro ladění komunikace mezi více zařízeními 
+	\item možnost libovolných úprav příchozích i odchozích dat pomocí skriptů v jazyce Python 
+	\item simulace chovaní plánovaného robota -- hledání a ladění strategií
+	\item simulace dat ze senzorů (zatím) neexistujícího robota pro psaní a ladění programu 
+	\item vytváření vlastních ovládacích prvků -- například ovládání robota joystickem z počítače 
+	\end{itemize}
+
+ Lorris naprogramoval Vojtěch Boček a popsal ji podrobně ve své práci SOČ:
+  \url{http://soc.nidv.cz/archiv/rocnik35/obor/18}.
+ 
+ 
  
 \section{\LaTeX} 
 
