RoboticsManual: fix bug about opening terminal in Linux

--- a/RoboticsManual/software.tex
+++ b/RoboticsManual/software.tex
@@ -126,7 +126,7 @@ Tato kapitolka není úvodem do Linuxu (materiálů na toto téma je na webu spo
 	
 	\end{itemize}  
 
-\item V Linuxu se celkově mnohem víc (a účiněji) používá příkazová řádka neboli program  {\tt terminál}. \index{termiál} Spouští se klávesou {\tt F4}. 
+\item V Linuxu se celkově mnohem víc (a účiněji) používá příkazová řádka neboli program  {\tt terminál}. \index{termiál} Spouští se klávesovou zkratkou {\tt Ctrl+Alt+T} nebo v Lubuntu spustíte správce souborů (2. ikona dole vlevo), přepnete se do požadovaného adresáře a stisknete {\tt F4}. 
 
 \item Adresářová struktura Linuxu je jednotná pro všechny disky v počítači. Akce typu: {\it \uv{přepni se na disk e:} } se v terminálu provede jako {\it \uv{přepni se do adresáře /media/<uzivatel>/ ...  } }. Nebo se přepnete pomocí jiného programu, např. Správce souborů. 	
 	
