RoboticsManual: add ref with video about Lorris

--- a/RoboticsManual/software.tex
+++ b/RoboticsManual/software.tex
@@ -18,8 +18,8 @@
 
  Lorris naprogramoval Vojtěch Boček a popsal ji podrobně ve své práci SOČ:
   \url{http://soc.nidv.cz/archiv/rocnik35/obor/18}.
- 
- 
+  
+ Video s krátkým představením Lorris: \url{http://www.youtube.com/watch?v=LkmFn40BbX8}.
  
 \section{\LaTeX} 
 
