RoboticsManual: add infrared sensor

--- a/RoboticsManual/cpppr.tex
+++ b/RoboticsManual/cpppr.tex
@@ -42,3 +42,9 @@ tento kód funguje pro čip ESP32. Pro čipy řady ATMega, které jsou na deská
 %todo dodělat program PWM
 Funguje stejně, ale místo příkazu ledcWrite je použit:  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Infrasenzor na čáru} \label{prog:qrd1114}
+
+Použijeme součástku \hyperref[qrd1114]{QRD1114}, kolektor (C) je připojený na A0. Zdrojový kód je pro Arduino Uno. 
+
+\lstinputlisting{priklady_c/qrd1114.cpp}
