--- a/RoboticsManual/motory.tex
+++ b/RoboticsManual/motory.tex
@@ -15,7 +15,7 @@ Nakonec je potřeba mít společnou zem pro čip i pro motorek -- pokud to není
 
 Pro větší motorky potřebujeme lepší tranzitor nebo dva tranzistory v tzv. Darlingtonově zapojení (viz web). 
 Další možností jsou speciální integrované obvody pro řízení motorů, tzv.  
- \hyperlink{drivery}{drivery}.  
+ \hyperref[driver]{drivery}.  
 
 Pokud chceme řídit motory programově pomocí PWM (viz další kapitola), 
 musíme navíc mezi emitor a kolektor tranzistoru vložit (obyčejnou) diodu pólovanou závěrně vůči baterii. 
