--- a/RoboticsManual/soucastky.tex
+++ b/RoboticsManual/soucastky.tex
@@ -89,9 +89,8 @@ jejíž hlavní vlastností je indukčnost, jednotka henry, značka H.
 
 \section{Další součástky}
 
-\subsection{Driver}
+\subsection{Driver} \label{driver}
 
-\hypertarget{drivery}{} 
 Čip nemůže řídit například motor přímo, protože jedním pinem může protékat obvykle maximálně 40~mA. 
 Většina motorů potřebuje mnohem větší proud.
  Proto se používají součástky zvané\index{driver} {\bf drivery}, které podle pokynů z~čipu řídí proud z~baterií do motorů a~servomotorů. 
