--- a/RoboticsManual/motory.tex
+++ b/RoboticsManual/motory.tex
@@ -15,17 +15,19 @@ Nakonec je potřeba mít společnou zem pro čip i pro motorek -- pokud to není
 
 Pro větší motorky potřebujeme lepší tranzitor nebo dva tranzistory v tzv. Darlingtonově zapojení (viz web). 
 Další možností jsou speciální integrované obvody pro řízení motorů, tzv.  
- \hyperref[driver]{drivery}.  
+ \hyperref[driver]{drivery}, které jsou složeny z mnoha tranzistorů a dalších prvků. 
 
 Pokud chceme řídit motory programově pomocí PWM (viz další kapitola), 
 musíme navíc mezi emitor a kolektor tranzistoru vložit (obyčejnou) diodu pólovanou závěrně vůči baterii. 
 Při vypnutí tranzistoru vznikají totiž na cívkách motorku napěťové špičky, které deformují tvar PWM signálu.  
 Další proudy se indukují, když se motorek po vypnutí proudu setrvačností otáčí dál. 
 
-\subsection{PWM}
+\subsection{PWM} \label{PWM}  \index{PWM} 
 
-%todo \dest[ref:PWM] \iid PWM \rfc{pwm} 
-%doplnit 
+{\bf PWM}  (Pulse Width Modulation) neboli pulzně šířková modulace je učený název pro tzv. obdélníkový signál -- z pinu vychází hodnoty napětí, které zakreslené do grafu mají tvar 
+\href{https://www.arduino.cc/en/Tutorial/PWM}{obdélníku}.
+ Proč zrovna obdélník? Protože na tranzistorech i driverech jsou při řízení motoru nejmenší ztráty, když jsou zcela otevřené (přenáší maximum napětí nebo proudu) nebo zcela zavřené (nepřenáší nic). Nejmenší ztráty znamenají také nejsnazší možné chlazení. Proto se snažíme stavům mezi oběma krajními mezemi vyhnout a zkrátit je na minimum. 
+
 
 \subsection{Řízení serva}
 
