--- a/RoboticsManual/prilohy.tex
+++ b/RoboticsManual/prilohy.tex
@@ -1,5 +1,5 @@
-\section{Příloha A~-- Hodnoty vybraných součástek}
-%todo příloha se nečísluje
+\section*{Příloha A~-- Hodnoty vybraných součástek}
+
 
 \hypertarget{1N4148}{}
 {\bf Dioda 1N4148}  \index{dioda!1N4148}\index{1N4148!dioda}
@@ -81,27 +81,23 @@ To znamená, že pokud budeme chtít tranzistorem spínat proud 10~A, tak budeme
 
 %Zesílení $h_{fe}$\footnote{Ang.: DC Current Gain}
 
-\section{ Příloha B -- Poznámky a~vize}
+\section*{Příloha B -- Poznámky a~vize}
 
 
 
-\subsection{Přerušení}
+\subsection*{Přerušení}
 
 Co je přerušení? Procesor může zvládnout pouze jednu operaci na jeden tik krystalu, 
 postupuje od jednoho příkazu k~druhému a~nemůže jen tak všeho nechat a~věnovat se něčemu jinému, občas je to ale potřeba.
  Při přerušení procesor všeho nechá a~bude se věnovat přerušení, potom co skončí se bude věnovat dál programu tam, kde přestal. 
 
-\subsection{Baterie}
+\subsection*{Baterie}
 
 Dobíjecí: napětí 1,2 V~\index{baterie!dobíjecí}\index{dobíjecí!baterie}
 
 Jednorázové: napětí 1,5 V~\index{baterie!jednorázové}\index{jednorázové!baterie}
  
-\subsection{Vize -- co přidat do textu}
-
-Github
-
-Lorris
+\subsection*{Vize -- co přidat do textu}
 
 Adruino IDE 
 
@@ -116,3 +112,4 @@ Převodník napěťových úrovní
 Pájení 
 
 Sběrnice - USART/UART, IIC, SPI, další?
+
