--- a/RoboticsManual/software.tex
+++ b/RoboticsManual/software.tex
@@ -1,5 +1,5 @@
  
- \section{Lorris}
+ \section{Lorris} \label{lorris}
  
  {\bf Lorris}\footnote{\url{http://tasssadar.github.io/Lorris/cz/index.html}} \index{Lorris} je rozsáhlá sada nástrojů, které mají společný cíl -- pomáhat při vývoji, ladění a řízení zejména robotů, ale i jiných elektronických zařízení. V současnosti neexistuje jiná volně dostupná aplikace, která by umožňovala dostatečně jednoduše v téměř libovolném formátu zobrazit data přicházející z čipů nebo i data ze souborů. 
  
@@ -20,6 +20,8 @@
   \url{http://soc.nidv.cz/archiv/rocnik35/obor/18}.
   
  Video s krátkým představením Lorris: \url{http://www.youtube.com/watch?v=LkmFn40BbX8}.
+ 
+  \hyperref[prog:lorris]{Příklad} posílání dat pro Lorris. \label{lorris}
  
 \section{\LaTeX} 
 
