--- a/RoboticsManual/prilohy.tex
+++ b/RoboticsManual/prilohy.tex
@@ -113,3 +113,11 @@ Pájení
 
 Sběrnice - USART/UART, IIC, SPI, další?
 
+% - modrozub
+
+% - propojení s mobilem 
+
+% - verze jako poslední příloha 
+% součástky: tlačítko včetně zapojení, barevný senzor 
+
+
