--- a/RoboticsManual/zacatek.tex
+++ b/RoboticsManual/zacatek.tex
@@ -169,7 +169,7 @@ Začínáme v~okně {\bf Explorer}, \index{Explorer}
  kde je umístěna adresářová struktura projektu\footnote{Pokud toto okno není vidět, zobrazíte ho v~menu {\it View} položka {\it Explorer} }.
 Otevřete soubory {\it platformio.ini} a~v~adresáři {\it src} soubor {\it main.cpp}. 
  
-Pro pohodlnou práci s~deskou ALKS byla \index{LearningKit} napsaná tzv. knihovna {\it LearningKit}. 
+Pro pohodlnou práci s~deskou \hyperref[alks]{ALKS} byla \index{LearningKit} napsaná tzv. knihovna {\it LearningKit}. 
 Aby fungovala, musí být do souboru {\it platformio.ini} dopsán řádek {\tt lib\_deps = 1745} (bez mezery na začátku řádku) a~do záhlaví souboru {\it main.cpp} doplňte
 % {\tt include "LearningKit.h\"}.  
 %% nahrazeno \verb| include "LearningKit.h"|
