RoboticsManual: add notes about ALKS and Arduino nano

--- a/RoboticsManual/cpppr.tex
+++ b/RoboticsManual/cpppr.tex
@@ -54,7 +54,8 @@ Použijeme součástku \hyperref[qrd1114]{QRD1114}, kolektor (C) je připojený 
 Příklad ukazuje posílání dat do Analyzéru pro \hyperref[lorris]{Lorris}.
  Posílá simulovaný barevný senzor, potenciometr, tlačítka binárně a tlačítka po bytech. 
 
-Zdrojový kód je tentokrát pro Arduino nano umístěné na desce ALKS a používá knihovny
+Zdrojový kód je tentokrát pro desku \hyperref[alks:nano]{Arduino nano}
+ umístěnou na desce \hyperref[alks]{ALKS} a používá knihovny
 {\tt LearningKit.h}  a  {\tt LearningKit\_nano.h}. 
 
 \lstinputlisting{priklady_c/lorris_data.cpp}
